--- a/app/src/main/res/layout/activity_new_feed.xml
+++ b/app/src/main/res/layout/activity_new_feed.xml
@@ -1,9 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activity.NewFeed">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal">
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:id="@+id/btnMenu"
+            android:src="@drawable/ic_baseline_more_vert_24px"
+            android:layout_marginLeft="5dp"
+            android:background="#0000"/>
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:id="@+id/btnSearch"
+            android:src="@drawable/search"
+            android:layout_marginLeft="20dp"
+            android:background="#0000"/>
+        <EditText
+            android:layout_width="200dp"
+            android:layout_height="match_parent"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:id="@+id/edtSearch"
+            android:background="#0000"/>
+        <ImageButton
+            android:id="@+id/btnNotification"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:src="@drawable/megaphone"
+            android:background="#0000"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:layout_marginBottom="5dp">
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:id="@+id/btnNews"
+            android:src="@drawable/news"
+            android:layout_weight="1"
+            android:background="#0000" />
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:id="@+id/btnEvents"
+            android:src="@drawable/schedule"
+            android:layout_weight="1"
+            android:background="#0000"/>
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:id="@+id/btnChat"
+            android:src="@drawable/collaboration"
+            android:layout_weight="1"
+            android:background="#0000"/>
+        <ImageButton
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:id="@+id/btnMap"
+            android:src="@drawable/navigate"
+            android:layout_weight="1"
+            android:background="#0000"/>
+    </LinearLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:scrollbars="vertical"/>
+</LinearLayout>
